Fix changes requested

--- a/src/style.css
+++ b/src/style.css
@@ -1,126 +1,8 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-:root {
-  --font-family: 'Poppins', sans-serif;
-  --font-family-styled: 'Sacramento', cursive;
-  --Box-shadow-outside: -5px -5px 20px rgba(255, 255, 255, 0.849), 5px 5px 9px rgba(94, 104, 121, 0.3);
-  --Box-shadow-inside: inset -5px -5px 9px rgba(255, 255, 255, 0.647), inset 5px 5px 9px rgba(94, 104, 121, 0.3);
-}
+/* reset css */
 
 body {
   margin: 0;
   padding: 0;
-}
-
-.to-do-list-section {
-  background-color: rgb(246, 243, 238);
-  justify-content: center;
-  margin: auto;
-  height: 100vh;
-}
-
-.container {
-  display: flex;
-  align-self: center;
-  flex-direction: column;
-  box-shadow: var(--Box-shadow-outside);
-  border-radius: 7px;
-  background-color: #fff;
-  height: auto;
-  width: 50%;
-  margin: auto;
-  position: relative;
-  top: 10%;
-}
-
-.title-div {
-  font-family: var(--font-family-styled);
-  font-size: 24px;
-  color: rgb(163, 158, 158);
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.image {
-  color: rgb(163, 158, 158);
-  font-size: 15px;
-  padding: 10px;
-}
-
-.remove-icon {
-  color: rgb(163, 158, 158);
-  font-size: 20px;
-  padding: 20px;
-}
-
-.li-list {
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.fa-ellipsis-vertical {
-  pointer-events: none;
-}
-
-.dragged-item {
-  opacity: 0.5; /* make the item semi-transparent */
-  background-color: rgb(214, 204, 204);
-}
-
-.delete-item {
-  background-color: rgb(177, 144, 74);
-  color: white;
-}
-
-.Checkboxi {
-  margin-right: 10px;
-}
-
-.listdiv {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.add-items {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.addItem {
-  border: none;
-  outline: none;
-  height: 40px;
-  width: 100%;
-  font-style: italic;
-}
-
-.borderLine {
-  border: 1px solid rgb(251, 248, 248);
-}
-
-.input-field {
-  width: 100%;
-}
-
-.button-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(251, 248, 248);
-  color: gray;
-  height: 40px;
-  width: 100%;
+  font-family: 'Open Sans', sans-serif;
+  box-sizing: border-box;
 }
